@@ -169,6 +169,7 @@ performance improvements:
 - recalculating only needed partitions in cons_knapsack.c, not always both
 - calculation of node priority now also works when variable's relaxation value is equal to a bound
 - fasten knapsack separation by replacing SCIPallocBufer(Array) through SCIPallocBlockMemory(Array)
+- fixed issue w.r.t. calling primal heuristics after presolving detected infeasibility
 
 SCIP version 2.0.1
 ==================
